--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_easyloading: ^3.0.5
+
 
 
   # The following adds the Cupertino Icons font to your application.
