--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_easyloading: ^3.0.5
   palette_generator:
   email_validator:
+  google_fonts:
 
 
 
@@ -65,12 +66,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+     - family: Ubuntu
+       fonts:
+         - asset: assets/fonts/Ubuntu-Regular.ttf
+         - asset: assets/fonts/Ubuntu-Bold.ttf
+           weight: 700
+     - family: GreatVibes
+       fonts:
+         - asset: assets/fonts/GreatVibes-Regular.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
