--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   palette_generator:
   email_validator:
   google_fonts:
+  dio: ^5.7.0
+  flutter_screenutil: ^5.9.3
+  cached_network_image:
+
 
 
 
@@ -53,7 +57,8 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-  - images/
+  - assets/images/
+  - assets/data/arabalar.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
