--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,12 @@ dependencies:
   dio: ^5.7.0
   flutter_screenutil: ^5.9.3
   cached_network_image:
+  shared_preferences: ^2.3.4
+  flutter_secure_storage: ^9.2.2
+  path_provider: ^2.1.5
+  get_it: ^8.0.3
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 
 
@@ -40,6 +46,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.14
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
