feat: add new Cubit, bloc using package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   hive_flutter: ^1.1.0
   firebase_core: ^3.9.0
   flutter_sequence_animation: ^4.0.0
+  flutter_riverpod: ^2.6.1
+  flutter_bloc: ^9.0.0
 
 
 
